package it.pierosilvestri.leaderboard_presentation.leaderboard

object LeaderboardTestConst {
    const val BUTTON_NEW_SESSION = "button_new_session"
    const val NEW_SESSION_DIALOG = "new_session_dialog"
    const val PLAYER_LIST = "player_list"
    const val PLAYER_SELECTED = "player_selected_%1\$s"
    const val NEW_SESSION_DIALOG_DISTANCE = "new_session_dialog_distance"
    const val NEW_SESSION_DIALOG_OK_BUTTON = "new_session_dialog_ok_button"
    const val LEADERBOARD_LIST = "leaderboard_list"
    const val LEADERBOARD_ITEM = "leaderboard_item_%1\$s"
}