package it.pierosilvestri.stopwatch_presentation.stopwatch

object StopwatchTestConst {

    const val STOPWATCH_DISPLAY = "stopwatch_display"
    const val STOPWATCH_BUTTON = "stopwatch_button"
    const val STOPWATCH_BUTTON_STOP = "stopwatch_button_stop"

}